# luma-interview

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/common/: Badge.tsx  Button.tsx  Card.tsx
frontend/src/components/layout/: Header.tsx
frontend/src/context/: WebSocketContext.tsx
frontend/src/pages/: ScrapePage.tsx  ServerDashboardPage.tsx
frontend/src/types/: api.ts
frontend/src/utils/: constants.ts
src/luma_api/: __init__.py  config.py  main.py
src/luma_api/auth/: __init__.py  dependencies.py  mock_auth.py
src/luma_api/errors/: __init__.py  exceptions.py  handlers.py
src/luma_api/middleware/: __init__.py  rate_limiter.py
src/luma_api/models/: __init__.py  generation.py  job.py  responses.py  user.py  video.py
src/luma_api/queue/: __init__.py  lua_scripts.py  priority_queue.py  worker.py
src/luma_api/routes/: __init__.py  account.py  admin.py  generate.py  health.py  jobs.py  scrape.py  videos.py  websocket.py
src/luma_api/services/: __init__.py  account_service.py  job_service.py  queue_service.py  rate_limit_service.py  scrape_service.py  video_service.py
src/luma_api/storage/: __init__.py  memory.py  redis_client.py
tests/: __init__.py  conftest.py
tests/integration/: test_generate_api.py  test_rate_limiting.py  test_videos_api.py
tests/unit/: test_models.py  test_rate_limiter.py
